--- a/src/App.css
+++ b/src/App.css
@@ -190,8 +190,9 @@ body {
     .tabela-linha {
         max-width: 20rem;
         min-width: 20rem;
+        min-height: 3rem;
         grid-template-columns: 2fr 1fr 0.5fr 0.5fr;
-        height: 3rem;
+        height: auto;
         font-size: 10px;
     }
 
